[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowbyte"
version = "0.1.0"
description = "ETL tool syncing Haravan → PostgreSQL, CLI-first, self-hosted"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "tenacity>=8.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "croniter>=2.0",
    "structlog>=24.0",
    "cryptography>=42",
    "apscheduler>=3.10,<4",
    "ruamel.yaml>=0.18",
]

[project.scripts]
flowbyte = "flowbyte.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flowbyte"]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: requires Docker (testcontainers)",
]

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
branch = true
source = ["src/flowbyte"]
omit = ["*/migrations/*", "*/alembic/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
]

# ── Dev / test dependencies ───────────────────────────────────────────────────

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.0",
    "respx>=0.21",
    "freezegun>=1.5",
    "ruff>=0.4",
    "mypy>=1.9",
]
